# knx-ga-exporter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  knx-ga-exporter.py  pyproject.toml  requirements.txt  setup-venv.sh
.github/workflows/: python-pdm.yml
Examples/SmallExampleWithRoomBook/: KNX-planning-example.xlsx  convert.sh
docs/: index.md
docs/Examples/01-SmallExampleWithRoomBook/: KNX-planning-example.xlsx  convert.sh  knx-group-addresses_from_ets.csv
docs/Examples/02-CustomLayout/: custom-layout-config.json  custom-layout-knx-group-addresses.csv  custom-layout.xlsx
docs/Examples/CustomLayout/: convert.sh  custom-layout.xlsx
docs/Examples/SmallExampleWithRoomBook/: KNX-planning-example.xlsx  convert.sh
src/knx_ga_exporter/: CHANGELOG.md  __main__.py  argparse.py  exporter.py  group_address.py  logging.py  parser.py
tests/: test_conversion.py  test_general.py  util_runner.py
tests/expected_outputs/: KNX-planning-example_format_1_1_sep_comma.csv  KNX-planning-example_format_1_1_separator_comma.csv  KNX-planning-example_format_1_1_separator_semicolon.csv  KNX-planning-example_format_3_3.csv  custom-layout.csv
tests/inputs/: KNX-planning-example.xlsx  custom-layout.xlsx  encoding-error.xlsx  missing-maingroup-name.xlsx
